Update build.gradle
- use Gradle javafxplugin instead of manual JavaFX module/dependency management
- fix debugging on IntelliJ